[gd_scene load_steps=6 format=3 uid="uid://cvqgt8cut7y2e"]

[ext_resource type="Script" path="res://Scenes/Characters/Bat.gd" id="1_2p23b"]

[sub_resource type="SphereShape3D" id="SphereShape3D_2lhut"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_plhd5"]
albedo_color = Color(0.403922, 0.0352941, 0.439216, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ltkxe"]
material = SubResource("StandardMaterial3D_plhd5")

[sub_resource type="CylinderMesh" id="CylinderMesh_hhiyi"]
top_radius = 3.0

[node name="Bat" type="Area3D"]
script = ExtResource("1_2p23b")

[node name="Bat" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
shape = SubResource("SphereShape3D_2lhut")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.532019, 0, -0.846732, 0, 1, 0, 0.846732, 0, 0.532019, 0, 0, 3)
mesh = SubResource("SphereMesh_ltkxe")
skeleton = NodePath("../..")

[node name="Bat_Bumping" type="AkEvent3D" parent="."]
event = {
"id": 1125471007,
"name": "Bat_Bumping"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Bat_Dialog" type="AkEvent3D" parent="."]
event = {
"id": 2767651361,
"name": "Bat_Dialog"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Bat_Thanks" type="AkEvent3D" parent="."]
event = {
"id": 1816682394,
"name": "Bat_Thanks"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Bat_Narration" type="AkEvent3D" parent="."]
event = {
"id": 2963949393,
"name": "Bat_Narration"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Bat_Cavern_Locked" type="AkEvent3D" parent="."]
event = {
"id": 2212254451,
"name": "Bat_Cavern_Locked"
}
stop_on = 3

[node name="Bat_Eating" type="AkEvent3D" parent="."]
event = {
"id": 1629516455,
"name": "Bat_Eating"
}
stop_on = 3

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_hhiyi")
skeleton = NodePath("")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="end_of_event" from="Bat_Dialog" to="." method="_on_bat_dialog_end_of_event"]
[connection signal="end_of_event" from="Bat_Thanks" to="." method="_on_bat_thanks_end_of_event"]
[connection signal="end_of_event" from="Bat_Cavern_Locked" to="." method="_on_bat_cavern_locked_end_of_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
